compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case__called_case.snap
---
source: compiler-core/src/javascript/tests/case.rs
assertion_line: 151
expression: "\nfn go(x, y) {\n  case x {\n    0 -> y\n    _ -> y\n  }()\n}\n"
---
----- SOURCE CODE

fn go(x, y) {
  case x {
    0 -> y
    _ -> y
  }()
}


----- COMPILED JAVASCRIPT
function go(x, y) {
  return (() => {
    if (x === 0) {
      return y;
    } else {
      return y;
    }
  })()();
}
