compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case__following_todo.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn go(x) {\n  case x {\n    True -> todo\n    _ -> 1\n  }\n}\n"
---
import { makeError } from "../rakun.mjs";

function go(x) {
  if (x) {
    throw makeError(
      "todo",
      "my/mod",
      4,
      "go",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  } else {
    return 1;
  }
}
