compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case__multi_subject_catch_all.snap
---
source: compiler-core/src/javascript/tests/case.rs
assertion_line: 34
expression: "\nfn go(x, y) {\n  case x, y {\n    True, True -> 1\n    _, _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

fn go(x, y) {
  case x, y {
    True, True -> 1
    _, _ -> 0
  }
}


----- COMPILED JAVASCRIPT
function go(x, y) {
  if (x && y) {
    return 1;
  } else {
    return 0;
  }
}
