compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case__pipe.snap
---
source: compiler-core/src/javascript/tests/case.rs
assertion_line: 122
expression: "\nfn go(x, f) {\n  case x |> f {\n    0 -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

fn go(x, f) {
  case x |> f {
    0 -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
function go(x, f) {
  let $ = (() => {
    let _pipe = x;
    return f(_pipe);
  })();
  if ($ === 0) {
    return 1;
  } else {
    return 2;
  }
}
