compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case__pointless.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn go(x) {\n  case x {\n    _ -> x\n  }\n}\n"
---
function go(x) {
  {
    return x;
  }
}
