compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case__preassign_assignment.snap
---
source: compiler-core/src/javascript/tests/case.rs
assertion_line: 106
expression: "\nfn go(x) {\n  let y = case x() {\n    True -> 1\n    _ -> 0\n  }\n  y\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let y = case x() {
    True -> 1
    _ -> 0
  }
  y
}


----- COMPILED JAVASCRIPT
function go(x) {
  let y = (() => {
    let $ = x();
    if ($) {
      return 1;
    } else {
      return 0;
    }
  })();
  return y;
}
